--- a/charts/podinfo/Chart.yaml
+++ b/charts/podinfo/Chart.yaml
@@ -4,9 +4,9 @@ appVersion: 9.0.0
 name: podinfo
 engine: gotpl
 description: Podinfo Helm chart for Kubernetes
-home: https://github.com/stefanprodan/podinfo
+home: https://github.com/jhidalgo3/charts
 maintainers:
-- email: stefanprodan@users.noreply.github.com
-  name: stefanprodan
+- email: jhidalgo3@users.noreply.github.com
+  name: jhidalgo3
 sources:
-- https://github.com/stefanprodan/podinfo
+- https://github.com/jhidalgo3/podinfo
